--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.3.2",
+    "axios": "^0.23.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "truffle-contract": "^4.0.31",
+    "vue": "^2.6.11",
+    "web3": "^1.6.0",
+    "web3-core-requestmanager": "^1.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
