--- a/package.json
+++ b/package.json
@@ -11,18 +11,25 @@
     "@openzeppelin/contracts": "^4.3.2",
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
+    "ethers": "^5.4.7",
     "truffle-contract": "^4.0.31",
     "vue": "^2.6.11",
     "web3": "^1.6.0",
     "web3-core-requestmanager": "^1.6.0"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-eslint": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
     "babel-eslint": "^10.1.0",
+    "chai": "^4.3.4",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.7",
+    "hardhat": "^2.6.6",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -43,5 +50,17 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "description": "## Project setup ``` yarn install ```",
+  "main": "babel.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://gitee.com/xiongzetian/erc20.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
