--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "ethers": "^5.4.7",
+    "hardhat-abi-exporter": "^2.4.0",
     "truffle-contract": "^4.0.31",
     "vue": "^2.6.11",
     "web3": "^1.6.0",
